--- a/auth/jwt-auth-service/src/main/resources/application.yml
+++ b/auth/jwt-auth-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: jwt-auth-service
   redis:
     database: 0
-    host: localhost
+    host: 192.168.175.100
     port: 6379
     password: 123456
 
@@ -14,14 +14,3 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:20000/eureka/
-
-management:
-  endpoint:
-    health:
-      show-details: always
-  endpoints:
-    web:
-      exposure:
-        include: '*'
-  security:
-    enabled: false
