--- a/server/user/user-pojo/pom.xml
+++ b/server/user/user-pojo/pom.xml
@@ -11,12 +11,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>user-pojo</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
-        <dependency>
-            <groupId>org.hibernate.validator</groupId>
-            <artifactId>hibernate-validator</artifactId>
-        </dependency>
+
     </dependencies>
 
 
