--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
         <module>server/user/user-web</module>
         <module>common/common</module>
         <module>common/web-component</module>
-        <module>server/user/user-pojo</module>
     </modules>
 
     <dependencyManagement>
@@ -88,6 +87,14 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
 
 
     </dependencies>
