--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>cloudComponent/hystrix-turbine</module>
         <module>cloudComponent/hystrix-dashboard</module>
         <module>server/search/elasticsearch</module>
+        <module>server/kafka/kafka</module>
     </modules>
 
     <dependencyManagement>
@@ -90,16 +91,6 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
-
-
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.1</version>
-        </dependency>
-
-
-
     </dependencies>
 
     <build>
@@ -107,7 +98,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
